fixed overflow2

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 html {
 	height:100%;
-	overflow-x:hidden;
+	overflow-x: hidden;
 }
 body {
 	height:100%;
 	position: relative;
+	overflow-x: hidden;
 }
 .first, .think, .instructions {
 	width:100%;
